<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clUserDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="visible"
        android:paddingTop="@dimen/dimen_32_dp"
        android:paddingLeft="@dimen/dimen_8_dp"
        android:paddingRight="@dimen/dimen_8_dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tflUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_userName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:focusableInTouchMode="true"
            android:layout_marginTop="@dimen/dimen_24_dp"
            android:layout_margin="@dimen/dimen_8_dp"
            android:background="@drawable/round_corners_accent">
            <EditText
                android:id="@+id/etUserId"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:inputType="text"
                android:maxLength="60"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tIlEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8_dp"
            android:hint="@string/hint_emailId"
            android:focusableInTouchMode="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tflUserId">

            <EditText
                android:id="@+id/etEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="60"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tIlConfirmEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8_dp"
            android:hint="@string/hint_confirmEmailId"
            android:focusableInTouchMode="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tIlEmailId">

            <EditText
                android:id="@+id/etConfirmEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="60"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvSend"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            app:layout_constraintTop_toBottomOf="@id/tIlConfirmEmailId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="@dimen/dimen_8_dp"
            android:layout_marginRight="@dimen/dimen_8_dp"
            android:layout_marginTop="@dimen/dimen_25_dp"
            android:paddingLeft="@dimen/dimen_25_dp"
            android:paddingRight="@dimen/dimen_25_dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/text_send"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/round_corners_accent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>